--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/principal.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
     <title>Tela de Login Responsiva</title>
 </head>
 <body>
-    <section id="princial">
-        <div class="bloco um"></div>
-        <div class="bloco dois"></div>
-    </section>
+    <main id="principal">
+        <section class="meiotela">
+            <div class="bloco um"></div>
+            <div class="bloco dois">
+                <h1>Login</h1>
+                <p class="saudacao">Seja bem-vindo(a)  novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <form action="#" method="post">
+                    <p>
+                    <label for="iemail">
+                    <span class="material-symbols-outlined">person</span>
+                    </label>
+                    <input type="email" name="email" id="iemail">
+                    </p>
+                    <p>
+                    <label for="isenha">
+                    <span class="material-symbols-outlined"> vpn_key
+                    </span></label>
+                    <input type="password" name="senha" id="isenha">
+                    </p>
+                    <p><input type="submit" value="Entrar">
+                    </p>
+                    <p><input type="button" value="Esqueci a Senha">
+                    </p>
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
