--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/mobile-first.css">
-    <link rel="stylesheet" href="estilos/style.css" media="not screen and (max-width: 766px)">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />    
+    <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">    
 
     <title>Tela de Login Responsiva</title>
 </head>
@@ -17,26 +16,28 @@
             <div class="bloco um"></div>
             <div class="bloco dois">
                 <h1>Login</h1>
-                <p class="saudacao">Seja bem-vindo(a)  novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <p class="saudacao">Seja bem-vindo(a)  novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente. </p>
 
             <form action="#" method="post" autocomplete="on">
                 
                 <p class="login-senha">
                     <label for="iemail">
-                    <span id="icone" class="material-symbols-outlined">person</span>
+                    <span class="material-icons">
+                        person
+                    </span>
                     </label>
                     <input type="email" name="email" id="iemail" placeholder="seu e-mail" required autocomplete="email" maxlength="30">
                 </p>
                 <p class="login-senha">
                     <label for="isenha">
-                    <span id="icone" class="material-symbols-outlined">vpn_key </span>
+                    <span class="material-icons">
+                        vpn_key
+                    </span>
                     </label>
                     <input type="password" name="senha" id="isenha"  placeholder="sua senha" required autocomplete="current-password" minlength="8" maxlength="16">
                 </p>
-                <p>
+                <p class="botao-flex">
                     <input type="submit" value="Entrar" class="botao entrar">
-                </p>
-                <p>
                     <input type="button" value="Esqueci a Senha" class="botao esqueci">
                 </p>
             </form>
